# CiviWave-FEM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  imgui.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tech_debt.md
.github/projects/: phase0_board.json
.github/rulesets/: protect-dev.json  protect-main.json
.github/scripts/: ClangTidy.txt  create_project_board.ps1
.github/workflows/: ci.yml  create_board.yml
RefDocs/: PLAN.md  SPEC.md  TODO.md
cmake/Modules/: DetectCompilerABI.cmake  FetchOrSystem.cmake  FormatAndTidy.cmake  SlangCompile.cmake
docs/: decisions.yaml  dependencies.md  dev-setup-linux.md  dev-setup-windows.md  extensions.md  plan.md  spec.md  tuning-amd-igpu.md  validation.md  versions.yaml
include/cwf/common/: math.hpp
include/cwf/config/: config.hpp
include/cwf/gpu/: buffers.hpp  device_buffers.hpp  newmark_stepper.hpp  pcg.hpp  sharding.hpp  upload.hpp  vulkan_context.hpp
include/cwf/mesh/: mesh.hpp  pack.hpp  preprocess.hpp
include/cwf/physics/: loads.hpp  materials.hpp  newmark.hpp  solver.hpp
include/cwf/post/: derived_fields.hpp  output_manager.hpp  probe_logger.hpp  vtu_writer.hpp
include/cwf/ui/: viewer.hpp
src/: CMakeLists.txt
src/config/: config.cpp
src/gpu/: buffers.cpp  device_buffers.cpp  newmark_stepper.cpp  pcg.cpp  sharding.cpp  upload.cpp  vulkan_context.cpp
src/mesh/: mesh.cpp  pack.cpp  preprocess.cpp
src/physics/: loads.cpp  newmark.cpp  solver.cpp
src/post/: derived_fields.cpp  output_manager.cpp  probe_logger.cpp  vtu_writer.cpp
src/shaders/: bc.slang  common.slang  derive_fields.slang  ke_apply_element.slang  ke_gather_node.slang  newmark_predictor.slang  newmark_update.slang  pcg_axpy.slang  pcg_dot_partials.slang  pcg_enforce_dirichlet.slang  pcg_precondition.slang  pcg_reduce_final.slang  reductions.slang  viewer_mesh_frag.slang  viewer_mesh_vert.slang
src/ui/: viewer.cpp  viewer_demo.cpp
tests/: CMakeLists.txt  config_validation_test.cpp  derived_fields_test.cpp  export_writer_test.cpp  mesh_loader_test.cpp  newmark_stepper_test.cpp  pack_shard_upload_test.cpp  pcg_test.cpp  physics_test.cpp  preprocess_test.cpp  test_config.hpp.in  test_sample.cpp
tests/data/: cantilever.msh  cantilever.yaml
tests/support/: config_builder.hpp
